--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -1,9 +1,9 @@
 .Navbar {
-  background: linear-gradient(
+  /* background: linear-gradient(
     90deg,
     rgb(147, 221, 132) 0%,
     rgb(8, 145, 15) 100%
-  );
+  ); */
   height: 80px;
   display: flex;
   align-items: center;
@@ -16,4 +16,8 @@
   list-style: none;
   text-align: center;
   width: 80vw;
+}
+
+.list {
+  font-size: 84;
 }
