--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,23 +1,32 @@
 .Navbar {
-  /* background: linear-gradient(
-    90deg,
-    rgb(147, 221, 132) 0%,
-    rgb(8, 145, 15) 100%
-  ); */
   height: 80px;
   display: flex;
   align-items: center;
 }
 
 .nav-menu {
-  display: grid;
-  grid-template-columns: repeat(6, auto);
-  grid-gap: 30px;
-  list-style: none;
+  display: inline;
   text-align: center;
-  width: 80vw;
+  width: calc(100% - 100px);
+  margin: 0 50px;
 }
 
-.list {
-  font-size: 84;
+.nav-item{
+  display: block;
+  float: right;
+  padding: 0 40px 0 0;
+  overflow: hidden;
+}
+
+.nav-item a {
+  font-weight: 400;
+  font-size: 40px;
+  font-variant-caps: all-small-caps;
+}
+
+.nav-item:hover {
+  overflow-y: hidden !important;
+}
+
+.nav-link{
 }
