--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,6 +1,5 @@
 .footer {
-  margin: 1rem 3rem;
   padding: 1rem 3rem;
-  width: calc(100% - 12rem);
+  width: 100%;
   border-top: 1px solid #bbbbbb;
 }
