--- a/src/components/pages/dashboard.css
+++ b/src/components/pages/dashboard.css
@@ -37,9 +37,10 @@
 
 .header {
   cursor: pointer;
-  border: 1px solid rgba(201, 39, 39, 0.1);
-  border-width: 2px;
-  padding: 15px;
+  width: calc(100% - 50rem);
+  border-top: 1px solid #bbbbbb;
+  margin: 0.5rem 25rem;
+  /* padding: 1rem 3rem; */
   font-size: 36px;
   color: #222;
   font-weight: bold;
