--- a/src/components/pages/dashboard.css
+++ b/src/components/pages/dashboard.css
@@ -37,17 +37,16 @@
 
 .header {
   cursor: pointer;
-  width: calc(100% - 50rem);
-  border-top: 1px solid #bbbbbb;
-  margin: 0.5rem 25rem;
-  /* padding: 1rem 3rem; */
-  font-size: 36px;
+  border-top: 0.5px solid #bbbbbb;
+  padding: center;
+  font-size: 24px;
   color: #222;
   font-weight: bold;
+  margin: center;
 }
 
 .header:hover {
-  background-color: rgba(208, 224, 63, 0.2);
+  background-color: rgba(24, 207, 146, 0.2);
 }
 
 .content {
