--- a/src/css/Explore.css
+++ b/src/css/Explore.css
@@ -8,3 +8,17 @@
 .row{
   height: 450px;
 }
+
+.date-title {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.date-choice {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.date-block {
+  margin: 10px 10px 20px 10px;
+}
