--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -31,6 +31,13 @@
 .nav-link{
 }
 
-.nav-button{
+.nav-button {
   margin: 18px 0;
+}
+
+.dropdown-content {
+  font-weight: 400;
+  font-size: 40px;
+  font-variant-caps: all-small-caps;
+  color: #F6416C;
 }
