--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,9 +1,15 @@
-.summary-chart{
+.summary-chart {
     float: left;
     width: 40%;
     margin: 0 5%;
   }
   
-.row{
+.row {
   height: 450px;
+}
+
+.snapshot-head {
+  font-size: 32px !important;
+  font-weight: 500;
+  font-variant: all-small-caps;
 }
