--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -8,8 +8,30 @@
   height: 450px;
 }
 
+.snapshot-headers {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 32px !important;
+  font-weight: 500;
+  font-variant: all-small-caps;
+}
+
 .snapshot-head {
   font-size: 32px !important;
   font-weight: 500;
   font-variant: all-small-caps;
+}
+
+.snapshot-explanation {
+  font-size: 32px !important;
+  font-weight: 300;
+  font-variant: all-small-caps;
+}
+
+.recommendations {
+  margin: 0 0 50px 0;
+}
+
+.alert-type {
+  font-weight: 400;
 }
