--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -3,23 +3,34 @@
     width: 40%;
     margin: 0 5%;
   }
-  
+
+.explanation-chart {
+    float: left;
+    width: 90%;
+    margin: 0 5%;
+  }
+
 .row {
   height: 450px;
 }
 
 .snapshot-headers {
+  text-align: center;
   margin-top: 5px;
   margin-bottom: 5px;
-  font-size: 32px !important;
+  font-size: 40px !important;
   font-weight: 500;
   font-variant: all-small-caps;
+  line-height: 1.3;
+  
 }
 
 .snapshot-head {
-  font-size: 32px !important;
+  font-size: 40px !important;
   font-weight: 500;
   font-variant: all-small-caps;
+  color: #00B8A9;
+  line-height: 1.3;
 }
 
 .snapshot-explanation {
@@ -34,4 +45,16 @@
 
 .alert-type {
   font-weight: 400;
+}
+
+.home-card {
+  display: inline-block;
+  vertical-align: top;   
+  width: 45%;
+  margin: 20px 2.5%;
+  padding: 20px;
+  min-height: 200px;
+  border-radius: 10px;
+  background: #F8F3D4;
+  cursor: pointer;
 }
