--- a/src/components/pages/dashboard.css
+++ b/src/components/pages/dashboard.css
@@ -85,27 +85,99 @@ form {
   font-size: 18px;
 }
 
+.form-item {
+  width: 100%;
+  margin: 10px 0;
+}
+
 .form-label {
-  font-size: 26px;
+  display: inline-block;
+  vertical-align: top;
+  font-size: 20px;
   font-weight: 300;
+  width: 220px;
+}
+
+
+.form-context {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0 2px;
 }
 
 .form-input {
-  font-size: 26px;
-  font-weight: 300;
+  display: inline-block;
+  font-size: 20px;
+  border-radius: 5px;
+  border: 1px solid grey;
+  width: calc(100% - 220px);
+  max-width: 400px;
+  min-width: 100px;
 }
 
+
 .form-smallinput {
+  display: inline-block;
   width: 70px;
-  font-size: 26px;
-  font-weight: 300;
+  font-size: 20px;
+  border-radius: 5px;
+  border: 1px solid grey;
+  margin: 0 2px 0 0;
 }
 
 .form-textarea {
-  font-size: 26px;
-  font-weight: 300;
+  display: inline-block;
+  font-size: 20px;
+  border-radius: 5px;
+  width: calc(100% - 220px);
+  border: 1px solid grey;
+  max-width: 400px;
+  min-width: 100px;
 }
 
 .asset-button {
-  width: 100px;
+  background: none;
+  border: 1.5px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  font-variant: all-small-caps;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1;
+  padding: 5px 0 13px 0;
+  width: 100%;
+  max-width: 620px;
+  min-width: 100px;
+  margin: 10px 0 0 0;
+}
+
+.asset-button:hover {
+  background: #FFDE7D;
+  text-decoration: none;
+}
+
+.ant-tabs-tab-btn {
+  font-variant: all-small-caps !important;
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.asset-form {
+  margin: 0 0 50px 0;
+}
+
+.ant-select-selector {
+  display: inline-block;
+  width: 70px !important;
+  border-radius: 5px !important;
+  border: 1px solid grey !important;
+}
+
+.ant-slider {
+  display: inline-block !important;
+  width: calc(100% - 220px);
+  max-width: 400px;
+  min-width: 100px;
 }
