--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -43,8 +43,13 @@
   margin: 0 0 50px 0;
 }
 
-.alert-type {
+.threshold-reason {
+  font-size: 16px;
+}
+
+.threshold-label {
   font-weight: 400;
+  font-size: 16px;
 }
 
 .home-card {
