--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -48,7 +48,11 @@
 }
 
 .threshold-label {
-  font-weight: 400;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+.threshold-span {
   font-size: 16px;
 }
 
@@ -62,4 +66,10 @@
   border-radius: 10px;
   background: #F8F3D4;
   cursor: pointer;
+}
+
+.recommendation-type {
+  font-variant: all-small-caps;
+  font-weight: 400;
+  font-size: 25px !important; 
 }
