--- a/src/css/Asset.css
+++ b/src/css/Asset.css
@@ -18,7 +18,6 @@
   padding-bottom: 50px;
 }
 
-
 .ant-tabs {
   width: 80vw;
   margin: 0 auto;
@@ -98,6 +97,21 @@ form {
   width: 220px;
 }
 
+.form-label2 {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 20px;
+  font-weight: 300;
+  width: 300px;
+}
+
+.form-address-label {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 20px;
+  font-weight: 300;
+  width: 450px;
+}
 
 .form-context {
   display: inline-block;
@@ -105,6 +119,15 @@ form {
   font-size: 20px;
   font-weight: 300;
   margin: 0 2px;
+}
+
+.form-context2 {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0 30px;
+  color: #21a7fa;
 }
 
 .form-input {
@@ -116,7 +139,6 @@ form {
   max-width: 400px;
   min-width: 100px;
 }
-
 
 .form-smallinput {
   display: inline-block;
@@ -153,8 +175,29 @@ form {
   margin: 10px 0 0 0;
 }
 
+.asset-delete-button {
+  background: none;
+  border: 1.5px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  font-variant: all-small-caps;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1;
+  padding: 5px 0 13px 0;
+  width: 100%;
+  max-width: 130px;
+  min-width: 100px;
+  margin: 10px 0 0 0;
+}
+
 .asset-button:hover {
-  background: #FFDE7D;
+  background: #ffde7d;
+  text-decoration: none;
+}
+
+.asset-delete-button:hover {
+  background: #f54747;
   text-decoration: none;
 }
 
