--- a/src/css/Asset.css
+++ b/src/css/Asset.css
@@ -110,7 +110,23 @@ form {
   vertical-align: top;
   font-size: 20px;
   font-weight: 300;
-  width: 450px;
+  width: calc(100% - 220px);
+  max-width: 400px;
+  min-width: 100px;
+}
+
+.form-address-input {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 20px;
+  font-weight: 300;
+  border-radius: 5px;
+  border: 1px solid grey;
+  width: 100%;
+  max-width: 620px;
+  min-width: 100px;
+  margin: 0 0 20px 0;
+  padding: 5px;
 }
 
 .form-context {
@@ -223,4 +239,18 @@ form {
   width: calc(100% - 220px);
   max-width: 400px;
   min-width: 100px;
+}
+
+.react-tel-input {
+  display: inline-block !important;
+  width: calc(100% - 220px);
+  max-width: 400px;
+  min-width: 100px;
+}
+
+.form-control {
+  font-size: 20px;
+  font-family: 'Barlow Condensed', sans-serif;
+  width: 200px !important;
+  font-weight: 300 !important;
 }
