--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -2,19 +2,20 @@
   height: 80px;
   display: flex;
   align-items: center;
+  min-width: 550px;
 }
 
 .nav-menu {
   display: inline;
   text-align: center;
-  width: calc(100% - 100px);
-  margin: 0 50px;
+  width: 94%;
+  margin: 0 3%;
 }
 
 .nav-item{
   display: block;
   float: right;
-  padding: 0 40px 0 0;
+  padding: 0 3% 0 0;
   overflow: hidden;
 }
 
