--- a/src/css/Asset.css
+++ b/src/css/Asset.css
@@ -150,6 +150,7 @@ form {
   font-size: 20px;
   font-weight: 300;
   margin: 0 0 0 20px;
+  padding: 10px, 100px, 10px, 10px;
   width: 100px;
   color: #21a7fa;
 }
