--- a/src/css/Asset.css
+++ b/src/css/Asset.css
@@ -37,6 +37,17 @@ form {
   border-radius: 5px;
 }
 
+.asset-component:hover {
+  display: inline-block;
+  vertical-align: top;
+  margin: 20px 2.5%;
+  padding: 10px;
+  width: 45%;
+  border: 1px solid #c4a702;
+  border-radius: 5px;
+  background-color: #40a9ff30;
+}
+
 .asset-name {
   margin: 0 0 0 0;
 }
@@ -149,7 +160,7 @@ form {
   vertical-align: top;
   font-size: 20px;
   font-weight: 300;
-  margin: 0 0 0 20px;
+  margin: 0 -100px 0 20px;
   width: 100px;
   color: #21a7fa;
 }
