--- a/src/css/Base.css
+++ b/src/css/Base.css
@@ -1,112 +1,110 @@
 @import url("./Fonts.css");
 
-*{
-    font-family: 'Barlow Condensed', sans-serif;
-    font-weight: 100;
-    font-size: 20px;
+* {
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 100;
+  font-size: 20px;
 }
 
 h1 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 32px !important;
-    font-weight: 500;
-    text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 32px !important;
+  font-weight: 500;
+  text-align: center;
 }
 
 h2 {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-size: 32px !important;
-    font-weight: 500;
-    font-variant: all-small-caps;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 32px !important;
+  font-weight: 500;
+  font-variant: all-small-caps;
 }
 
 h3 {
-    font-size: 28px;
-    font-weight: 300;
+  font-size: 28px;
+  font-weight: 300;
 }
 
 h4 {
-    font-size: 24px;
-    font-weight: 300;
-    text-align: center;
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
 }
 
 h5 {
-    font-size: 24px;
-    font-weight: 400;
-    text-align: center;
-    font-variant-caps: all-small-caps;
-    color: #05A445;
+  font-size: 24px;
+  font-weight: 400;
+  text-align: center;
+  font-variant-caps: all-small-caps;
+  color: #05a445;
 }
 
 p {
-    text-align: justify;
-    text-indent: 20px;
+  text-align: justify;
+  text-indent: 20px;
 }
 
 a {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
-a:hover{
-    color: #FFDE7D;
-    text-decoration: none;
+a:hover {
+  color: black;
+  text-decoration: none;
 }
 
 ol {
-    list-style: none;
-    counter-reset: c;
+  list-style: none;
+  counter-reset: c;
 }
 
 ol li {
-    counter-increment: c;
-    text-indent: -0.8em;
-    margin-left: 1em !important;
+  counter-increment: c;
+  text-indent: -0.8em;
+  margin-left: 1em !important;
 }
 
-ol li::before{
-    content: counter(c) ". ";
-    font-size: 24px;
-    font-weight: 500;
-    display: inline-block;
-    width: 0.5em;
-    
+ol li::before {
+  content: counter(c) ". ";
+  font-size: 24px;
+  font-weight: 500;
+  display: inline-block;
+  width: 0.5em;
 }
 
-
-.container{
-    min-height: calc(100vh - 210px);
-    min-width: 720px;
+.container {
+  min-height: calc(100vh - 210px);
+  min-width: 720px;
 }
 
-.bottom-line{
-    border-bottom: 1px solid grey;
+.bottom-line {
+  border-bottom: 1px solid grey;
 }
 
-.search-bar{
-    font-size: 18px;
+.search-bar {
+  font-size: 18px;
 }
 
 .horizontal-line {
-    border-top: 1px solid #aaa;
+  border-top: 1px solid #aaa;
 }
 
 .textarea {
-    height: 400px;
+  height: 400px;
 }
 
 .row-center {
-    width: 100%;
-    justify-content: center;
+  width: 100%;
+  justify-content: center;
 }
 
 .overlay {
-    margin: 0px 0;
-    padding: 0 5%;
-    min-height: calc(100vh - 150px);
+  margin: 0px 0;
+  padding: 0 5%;
+  min-height: calc(100vh - 150px);
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -117,6 +115,6 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
