--- a/src/css/Snapshot.css
+++ b/src/css/Snapshot.css
@@ -1,14 +1,14 @@
 .summary-chart {
-    float: left;
-    width: 40%;
-    margin: 0 5%;
-  }
+  float: left;
+  width: 40%;
+  margin: 0 5%;
+}
 
 .explanation-chart {
-    float: left;
-    width: 90%;
-    margin: 10px 5%;
-  }
+  float: left;
+  width: 90%;
+  margin: 10px 5%;
+}
 
 .row {
   height: 450px;
@@ -27,7 +27,7 @@
   font-size: 40px !important;
   font-weight: 500;
   font-variant: all-small-caps;
-  color: #00B8A9;
+  color: #00b8a9;
   line-height: 1.3;
 }
 
@@ -58,17 +58,16 @@
 
 .home-card {
   display: inline-block;
-  vertical-align: top;   
+  vertical-align: top;
   width: 45%;
   margin: 20px 2.5%;
   padding: 20px;
   min-height: 200px;
   border-radius: 10px;
-  background: #F8F3D4;
+  background: #f8f3d4;
   cursor: pointer;
   min-width: 400px;
 }
-
 
 .recommendation-text {
   font-weight: 300;
@@ -78,7 +77,7 @@
 .recommendation-type {
   font-variant: all-small-caps;
   font-weight: 500;
-  font-size: 28px !important; 
+  font-size: 28px !important;
 }
 
 .click-icon {
@@ -103,7 +102,7 @@
 }
 
 .battery-level {
-  background: #00B8A9;
+  background: #00b8a9;
   border-radius: 3px;
 }
 
@@ -130,7 +129,7 @@
   width: calc(100% / 96);
   height: 32px;
   margin: 0 0 -8px 0;
-  background: #00B8A9;
+  background: #00b8a9;
 }
 
 .time-hover {
@@ -159,7 +158,7 @@
 }
 
 .e {
-  opacity: 0.40;
+  opacity: 0.4;
 }
 
 .time-labels {
@@ -188,7 +187,7 @@
 
 .key-label-color {
   display: inline-block;
-  background: #00B8A9;
+  background: #00b8a9;
   vertical-align: bottom;
   height: 20px;
   width: calc((100% - 200px) / 5);
