--- a/src/css/Asset.css
+++ b/src/css/Asset.css
@@ -160,9 +160,9 @@ form {
   vertical-align: top;
   font-size: 20px;
   font-weight: 300;
-  margin: 0 0 0 20px;
-  padding: 10px, 100px, 10px, 10px;
-  width: 100px;
+  margin: 0 0px 0 20px;
+  padding: 10px, 10px, 10px, 10px;
+  width: 120px;
   color: #21a7fa;
 }
 
