--- a/src/css/Snapshot.css
+++ b/src/css/Snapshot.css
@@ -64,7 +64,7 @@
   padding: 20px;
   min-height: 200px;
   border-radius: 10px;
-  background: #f8f3d4;
+  background: #E8EBFF;
   cursor: pointer;
   min-width: 400px;
 }
