--- a/src/css/Snapshot.css
+++ b/src/css/Snapshot.css
@@ -23,6 +23,26 @@
   line-height: 1.3;
 }
 
+.snapshot-headers-avoid {
+  text-align: center;
+  margin: 20px 0 5px 0;
+  font-size: 40px !important;
+  font-weight: 500;
+  font-variant: all-small-caps;
+  line-height: 1.3;
+  color: #f6416c;
+}
+
+.snapshot-headers-should {
+  text-align: center;
+  margin: 20px 0 5px 0;
+  font-size: 40px !important;
+  font-weight: 500;
+  font-variant: all-small-caps;
+  line-height: 1.3;
+  color: #00b8a9;
+}
+
 .snapshot-head {
   font-size: 40px !important;
   font-weight: 500;
