--- a/src/css/Snapshot.css
+++ b/src/css/Snapshot.css
@@ -163,14 +163,17 @@
 
 .a {
   opacity: 1;
+  filter: brightness(85%);
 }
 
 .b {
   opacity: 0.85;
+  filter: brightness(90%);
 }
 
 .c {
   opacity: 0.7;
+  filter: brightness(95%);
 }
 
 .d {
